--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
 <html>
 <head>
     <title>Music Updates</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="hp">
@@ -22,78 +22,51 @@
                                 <p class="metadata">Published on {{format_date post.date_created}} by {{user.name}}</p>
                                 <p class="post-excerpt">{{post.excerpt}}</p>
                             </div>
-                            <span><a href="/post/{{post.id}}" class="cover">Click me to see post</a></span>
-
-<body>
-
-<div id="carouselNew" class="carousel slide" data-ride="carousel" data-interval="3000">
-    <div class="carousel-inner">
-        {{#each Posts as |post index|}}
-        <div class="carousel-item{{#unless index}} active{{/unless}}">
-            <div class="row mb-4 post">
-                <div class="col-md-12">
-                    <div class="post-card">
-                        <div class="post-image">
-                            <img src="{{post.image_url}}" alt="{{post.title}}">
-                        </div>
-                        <div class="post-content">
-                            <h2><a href="/post/{{post.id}}" class="post-title">{{post.title}}</a></h2>
-                            <p class="metadata">Published on {{format_date post.date_created}} by {{user.name}}</p>
-                            <p class="post-excerpt">{{post.excerpt}}</p>
-
                         </div>
                     </div>
                 </div>
             </div>
+            {{/each}}
         </div>
-        {{/each}}
+
+        <a class="carousel-control-prev" href="#carouselNew" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselNew" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
+    <!-- Add this div where you want the YouTube video to appear -->
+    <div id="youtube-player-container"></div>
+    <!-- Music Updates -->
+    <h1>Top 5 Music Tracks</h1>
+    <div id="top-tracks"></div>
 
-    <a class="carousel-control-prev" href="#carouselNew" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselNew" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-<!-- Add this div where you want the YouTube video to appear -->
-<div id="youtube-player-container"></div>
-<!-- Music Updates -->
-<h1>Top 5 Music Tracks</h1>
-<div id="top-tracks"></div>
+    <h1>Recommended Music Tracks</h1>
+    <div id="recommended-tracks" class="recommended-tracks-container"></div>
 
-<h1>Recommended Music Tracks</h1>
-<div id="recommended-tracks" class="recommended-tracks-container"></div>
+    <h1>Listen to songs right now</h1>
+    <div id="playlist-container" style="min-height: 360px;"></div>
 
-<h1>Listen to songs right now</h1>
-<div id="playlist-container" style="min-height: 360px;"></div>
-
-<div id="music-articles">
-    <h1>Music Articles</h1>
-    <div id="article-container" class="article-container"></div>
-</div>
-<div id="hip-hop-articles"></div>
-
+    <div id="music-articles">
+        <h1>Music Articles</h1>
+        <div id="article-container" class="article-container"></div>
+    </div>
+    <div id="hip-hop-articles"></div>
 <div id="chatbot-container">
-    <div id="chatbot-messages">
-      <!-- Messages from the chatbot will be appended here -->
-      <div class="message bot">Hello! How can I assist you?</div>
-      <div class="message user">Do You Have a question. ? </div>
-      <!-- Add more messages here -->
-    </div>
-    <input type="text" id="user-input" placeholder="Type your message..." />
+  <div id="chatbot-messages">
+    <!-- Messages from the chatbot will be appended here -->
+    <div class="message bot">Hello! How can I assist you?</div>
+    <div class="message user">Do You Have a question?</div>
+    <!-- Add more messages here -->
   </div>
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="/js/homepage.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+  <input type="text" id="user-input" placeholder="Type your message..." />
+</div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="/js/homepage.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
