--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TempoTales</title>
+  <title>TempoTells</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -39,7 +39,7 @@
     </div>
   </main>
   <footer class="footer">
-    <p>&copy; 2023 TempoTales. All rights reserved.</p>
+    <p>&copy; 2023 TempoTells. All rights reserved.</p>
   </footer>
 </body>
 <script src='./js/logout.js'></script>
